feat(orm): add on delete action